@@ -3,22 +3,24 @@ set -e
 
 if [ $SYNC_MODE = "full" ]
 then
-    exec java --enable-preview --add-modules jdk.incubator.concurrent \
+    exec java --enable-preview \
         -cp $HILDR_JAR $HILDR_MAIN_CLASS \
         --network $NETWORK \
         --jwt-secret $JWT_SECRET \
         --l1-rpc-url $L1_RPC_URL \
+        --l1-ws-rpc-url $L1_WS_RPC_URL \
         --l2-rpc-url http://${EXECUTION_CLIENT}:8545 \
         --l2-engine-url http://${EXECUTION_CLIENT}:8551 \
         --rpc-port $RPC_PORT \
         --sync-mode $SYNC_MODE
 elif [ $SYNC_MODE = "checkpoint"]
 then
-    exec java --enable-preview --add-modules jdk.incubator.concurrent \
+    exec java --enable-preview \
         -cp $HILDR_JAR $HILDR_MAIN_CLASS \
         --network $NETWORK \
         --jwt-secret $JWT_SECRET \
         --l1-rpc-url $L1_RPC_URL \
+        --l1-ws-rpc-url $L1_WS_RPC_URL \
         --l2-rpc-url http://${EXECUTION_CLIENT}:8545 \
         --l2-engine-url http://${EXECUTION_CLIENT}:8551 \
         --rpc-port $RPC_PORT \
